--- a/ProyectoPBD/app/views/admin/costos_otros.html.erb
+++ b/ProyectoPBD/app/views/admin/costos_otros.html.erb
@@ -7,7 +7,7 @@
 
 
             <div class="col-lg-12 ">
-            	<%= link_to 'Atras', :back, :class => "btn btn-warning izquierda" %>
+            	<%= button_to 'Atras', :back, :class => "btn btn-primary previous" %>
 				<div class="row cn1">
 					<div class="col-lg-4 ">
 							<!--<a href="#"><img class="img-circle img-borde" height="250px" src="https://lh4.ggpht.com/xy_lXoF9yFyIYHPgu4nHF-7-kMUmIvQzahQRG9LlsKmJ23KRpAs_RAYurSbzpzseo-Rc=w300" /></a> -->
