--- a/ProyectoPBD/app/views/admin/usuarios.html.erb
+++ b/ProyectoPBD/app/views/admin/usuarios.html.erb
@@ -5,7 +5,7 @@
         <div class="row">
 
             <div class="col-lg-12 ">
-               	<%= link_to 'Atras', :back, :class => "btn btn-warning" %>
+               	<%= button_to 'Atras', :back, :class => "btn btn-primary" %>
 
 				<div class="row cn1">
 					<div class="col-lg-4 ">
