--- a/ProyectoPBD/app/views/devise/registrations/new.html.erb
+++ b/ProyectoPBD/app/views/devise/registrations/new.html.erb
@@ -3,42 +3,67 @@
     <br><br>
         <div class="row">
             <div class="col-lg-12 ">
-        <div class="row cn1">
+            <h2 class="center">Registrate en ActiveCab</h2>
+            <hr>
+            <br><br>
 
-      <h2>Sign up</h2>
-
-      <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-        <%= devise_error_messages! %>
-
-        <div><%= f.label :email %><br />
-        <%= f.email_field :email, :autofocus => true %></div>
-
-        <div><%= f.label :nombre %><br />
-        <%= f.text_field :nombre %></div>
-
-        <div><%= f.label :apellidos %><br />
-        <%= f.text_field :apellidos %></div>
-
-        <div><%= f.label :telefono1 %><br />
-        <%= f.text_field :telefono1 %></div>
-
-        <div><%= f.label :telefono2 %><br />
-        <%= f.text_field :telefono2 %></div>
-
-        <div><%= f.label :rut %><br />
-        <%= f.text_field :rut %></div>
+            <div class="row">
+                    <div class="col-lg-6">
 
 
-        <div><%= f.label :password %><br />
-        <%= f.password_field :password %></div>
+                <div class="panel panel-primary shd">
+                  <div class="panel-heading">
+                    <h3 class="panel-title">Registro</h3>
+                  </div>
+                  <div class="panel-body center">
+                  <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+                    <%= devise_error_messages! %>
 
-        <div><%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation %></div>
+                    <p><%= f.label :email %>                       
+                    <%= f.email_field :email, :autofocus => true %><br />
 
-        <div><%= f.submit "Sign up" %></div>
-      <% end %>
+                    <p><%= f.label :nombre %>
+                    <%= f.text_field :nombre %><br />
 
-      <%= render "devise/shared/links" %>
+                    <p><%= f.label :apellidos %>  
+                    <%= f.text_field :apellidos %><br />
+
+                    <p><%= f.label :telefono1 %>  
+                    <%= f.text_field :telefono1 %><br />
+
+                    <p><%= f.label :telefono2 %> 
+                    <%= f.text_field :telefono2 %><br />
+
+                    <p><%= f.label :rut %> 
+                    <%= f.text_field :rut %><br />
+
+
+                    <p><%= f.label :password %>
+                    <%= f.password_field :password %><br />
+
+                    <p><%= f.label :Confirma_password %>
+                    <%= f.password_field :password_confirmation %><br />
+
+                    <p class="center"><%= f.submit "Registrar", :class =>'btn btn-primary'%>
+                  <% end %>
+
+                  <%= render "devise/shared/links" %>
+              </div>
+            </div>
+
+
+
+
+
+
+                        
+                    </div>
+                    <div class="col-lg-6">
+                        
+                    </div>
+
+            
+
       </div>
     </div>
   </div>
