--- a/ProyectoPBD/app/views/roles/index.html.erb
+++ b/ProyectoPBD/app/views/roles/index.html.erb
@@ -1,4 +1,4 @@
-
+<% if user_signed_in? and current_user.tipo == 'administrador' %>
 <div class="container marg2">
     
     <h1>Asignar Roles</h1>
@@ -135,3 +135,4 @@
 
 
 </div></div></div></div>
+<% end %>
