--- a/ProyectoPBD/app/views/travel_requests/edit.html.erb
+++ b/ProyectoPBD/app/views/travel_requests/edit.html.erb
@@ -1,6 +1,8 @@
+<% if user_signed_in? and current_user.tipo == 'cli_nat' %>
 <h1>Editar Solicitud Viaje</h1>
 
 <%= render 'form' %>
 
 <%= button_to 'Ver', @travel_request , :method => 'get', :class => 'btn btn-info'%> |
 <%= button_to 'Volver', travel_requests_path, :method => 'get', :class => 'btn btn-default' %>
+<% end %>
