--- a/ProyectoPBD/app/views/travel_requests/new.html.erb
+++ b/ProyectoPBD/app/views/travel_requests/new.html.erb
@@ -1,5 +1,14 @@
+<% if user_signed_in? and current_user.tipo == 'cli_nat' %>
 <h1>Nueva Solicitud de Viaje</h1>
 
 <%= render 'form' %>
 
 <%= button_to 'Volver', travel_requests_path , :method => 'get', :class => 'btn btn-default'%>
+<% end %>
+
+
+
+<div class="alert alert-success" role="alert">
+<br>
+      <strong>CUIDADO!</strong> para realizar la solicitud de taxis <%=link_to "debes estar REGISTRADO", {:controller=> :users, :action=>:sign_up}, :class=> "alert-link" %> como usuario, crea una cuenta de forma gratuita o <%=link_to "Inicia Sesión", {:controller=> :users, :action=>:sign_in}, :class=>"alert-link"%></a>.
+</div>
