--- a/ProyectoPBD/app/views/welcome/qs.html.erb
+++ b/ProyectoPBD/app/views/welcome/qs.html.erb
@@ -24,7 +24,7 @@
 							<i><h2>Radio Taxis Marcelino 3</h2></i><br>
 							<p>Con 25 años de experiencia en el transporte de pasajeros nos ha hecho una Empresa conocedora de los más altos requerimientos de los usuarios de este medio.
 							Contamos con una moderna flota de automóviles full equipo y transporte masivo de pasajeros (Van, Minibuses y Buses). Conductores profesionales, seleccionados rigurosamente por nuestro departamento de personal, dando plena seguridad al desplazamiento de nuestros clientes.</p>
-							<div class="autito"><i class="fa fa-taxi fa-5x"></i><br><b><i>ActiveCab</i></b></div>
+							<div class="center"><i class="fa fa-taxi fa-5x"></i><br><b><i>ActiveCab</i></b></div>
 						</div>
 					</div>
 
