--- a/ProyectoPBD/app/views/fixed_rates/_form.html.erb
+++ b/ProyectoPBD/app/views/fixed_rates/_form.html.erb
@@ -23,11 +23,11 @@
       <%= f.text_field :ori_tar %>
     </div>
     <div class="field">
-      <%= f.label :dest_tar %><br>
+      <%= f.label :Destino %><br>
       <%= f.text_field :dest_tar %>
     </div>
     <div class="field">
-      <%= f.label :costo_tar %><br>
+      <%= f.label :Costo %><br>
       <%= f.number_field :costo_tar %>
     </div>
     <div class="actions">
