--- a/ProyectoPBD/app/views/devise/registrations/edit.html.erb
+++ b/ProyectoPBD/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>Editar Usuario: <%= current_user.nombre%></h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
@@ -22,8 +22,8 @@
   <div><%= f.submit "Update" %></div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<h3>Cancelar mi cuenta</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
+<p>Unhappy? <%= button_to "Cancelar mi cuenta", registration_path(resource_name), :data => { :confirm => "Estás seguro?" }, :method => :delete %></p>
 
-<%= link_to "Back", :back %>
+<%= link_to "Atras", :back %>
