Reparado el scaffold de owners y los _forms
:3

--- a/ProyectoPBD/app/views/base_prices/_form.html.erb
+++ b/ProyectoPBD/app/views/base_prices/_form.html.erb
@@ -14,19 +14,19 @@
     <% end %>
 
     <div class="field">
-      <%= f.label :val_base %><br>
+      <%= f.label :Valor_base %><br>
       <%= f.number_field :val_base %>
     </div>
     <div class="field">
-      <%= f.label :ini_val_base %><br>
+      <%= f.label :Fecha_inicio_valor_base %><br>
       <%= f.date_select :ini_val_base %>
     </div>
     <div class="field">
-      <%= f.label :fin_val_base %><br>
+      <%= f.label :Fecha_término_valor_base %><br>
       <%= f.date_select :fin_val_base %>
     </div>
     <div class="field">
-      <%= f.label :estado_val_base %><br>
+      <%= f.label :estado_valor_base %><br>
       <%= f.text_field :estado_val_base %>
     </div>
     <div class="actions">
