--- a/ProyectoPBD/app/views/bills/_form.html.erb
+++ b/ProyectoPBD/app/views/bills/_form.html.erb
@@ -12,15 +12,15 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :rut_ent %><br>
+    <%= f.label :Rut_empresa %><br>
     <%= f.text_field :rut_ent %>
   </div>
   <div class="field">
-    <%= f.label :fecha_fact %><br>
+    <%= f.label :Fecha_factura %><br>
     <%= f.date_select :fecha_fact %>
   </div>
   <div class="field">
-    <%= f.label :total_fact %><br>
+    <%= f.label :Total_factura %><br>
     <%= f.number_field :total_fact %>
   </div>
   <div class="actions">
