--- a/ProyectoPBD/app/views/clients/_form.html.erb
+++ b/ProyectoPBD/app/views/clients/_form.html.erb
@@ -12,27 +12,27 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :run_cli %><br>
+    <%= f.label :Run_cliente %><br>
     <%= f.text_field :run_cli %>
   </div>
   <div class="field">
-    <%= f.label :nom_cli %><br>
+    <%= f.label :Nombre_cliente %><br>
     <%= f.text_field :nom_cli %>
   </div>
   <div class="field">
-    <%= f.label :apells_cli %><br>
+    <%= f.label :Apellidos_cliente %><br>
     <%= f.text_field :apells_cli %>
   </div>
   <div class="field">
-    <%= f.label :tel1_cli %><br>
+    <%= f.label :Teléfono_1_cliente %><br>
     <%= f.text_field :tel1_cli %>
   </div>
   <div class="field">
-    <%= f.label :tel2_cli %><br>
+    <%= f.label :teléfono_2_cliente %><br>
     <%= f.text_field :tel2_cli %>
   </div>
   <div class="field">
-    <%= f.label :email_cli %><br>
+    <%= f.label :email_cliente %><br>
     <%= f.text_field :email_cli %>
   </div>
   <div class="actions">
