--- a/ProyectoPBD/app/views/drivers/_form.html.erb
+++ b/ProyectoPBD/app/views/drivers/_form.html.erb
@@ -12,31 +12,31 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :run_driv %><br>
+    <%= f.label :Run_conductor %><br>
     <%= f.text_field :run_driv %>
   </div>
   <div class="field">
-    <%= f.label :nom_cond %><br>
+    <%= f.label :Nombre_conductor %><br>
     <%= f.text_field :nom_cond %>
   </div>
   <div class="field">
-    <%= f.label :apells_cond %><br>
+    <%= f.label :Apellidos_conductor %><br>
     <%= f.text_field :apells_cond %>
   </div>
   <div class="field">
-    <%= f.label :tel1_cond %><br>
+    <%= f.label :Teléfono_1_conductor %><br>
     <%= f.text_field :tel1_cond %>
   </div>
   <div class="field">
-    <%= f.label :tel2_cond %><br>
+    <%= f.label :Teléfono_2_conductor %><br>
     <%= f.text_field :tel2_cond %>
   </div>
   <div class="field">
-    <%= f.label :email_cond %><br>
+    <%= f.label :Email_conductor %><br>
     <%= f.text_field :email_cond %>
   </div>
   <div class="field">
-    <%= f.label :venc_licenc_cond %><br>
+    <%= f.label :Fecha_vencimiento_licencia_conducir %><br>
     <%= f.date_select :venc_licenc_cond %>
   </div>
   <div class="actions">
