--- a/ProyectoPBD/app/views/enterprise_clients/_form.html.erb
+++ b/ProyectoPBD/app/views/enterprise_clients/_form.html.erb
@@ -14,11 +14,11 @@
     <% end %>
 
     <div class="field">
-      <%= f.label :run_cli %><br>
+      <%= f.label :Run_cliente %><br>
       <%= f.text_field :run_cli %>
     </div>
     <div class="field">
-      <%= f.label :rut_ent %><br>
+      <%= f.label :Rut_empresa %><br>
       <%= f.text_field :rut_ent %>
     </div>
     <div class="actions">
