--- a/ProyectoPBD/app/views/kilometers_prices/_form.html.erb
+++ b/ProyectoPBD/app/views/kilometers_prices/_form.html.erb
@@ -14,19 +14,19 @@
     <% end %>
 
     <div class="field">
-      <%= f.label :val_km %><br>
+      <%= f.label :Valor_por_kilómetro %><br>
       <%= f.number_field :val_km %>
     </div>
     <div class="field">
-      <%= f.label :ini_val_km %><br>
+      <%= f.label :Fecha_inicio_valor %><br>
       <%= f.date_select :ini_val_km %>
     </div>
     <div class="field">
-      <%= f.label :fin_val_km %><br>
+      <%= f.label :Fecha_término_valor%><br>
       <%= f.date_select :fin_val_km %>
     </div>
     <div class="field">
-      <%= f.label :estado_val_km %><br>
+      <%= f.label :Estado_valor %><br>
       <%= f.text_field :estado_val_km %>
     </div>
     <div class="actions">
