--- a/ProyectoPBD/app/views/natural_clients/_form.html.erb
+++ b/ProyectoPBD/app/views/natural_clients/_form.html.erb
@@ -14,7 +14,7 @@
     <% end %>
 
     <div class="field">
-      <%= f.label :run_cli %><br>
+      <%= f.label :Run_cliente %><br>
       <%= f.text_field :run_cli %>
     </div>
     <div class="actions">
