--- a/ProyectoPBD/app/views/owner_commissions/_form.html.erb
+++ b/ProyectoPBD/app/views/owner_commissions/_form.html.erb
@@ -14,15 +14,15 @@
     <% end %>
 
     <div class="field">
-      <%= f.label :porcent_comi_prop %><br>
+      <%= f.label :Porcentaje_comisión_propietario %><br>
       <%= f.text_field :porcent_comi_prop %>
     </div>
     <div class="field">
-      <%= f.label :ini_comi_prop %><br>
+      <%= f.label :Fecha_inicio_comisión_propietario %><br>
       <%= f.date_select :ini_comi_prop %>
     </div>
     <div class="field">
-      <%= f.label :fin_comi_prop %><br>
+      <%= f.label :Fecha_término_comisión_propietario %><br>
       <%= f.date_select :fin_comi_prop %>
     </div>
     <div class="actions">
