--- a/ProyectoPBD/app/views/owners/_form.html.erb
+++ b/ProyectoPBD/app/views/owners/_form.html.erb
@@ -12,27 +12,23 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :run_own %><br>
+    <%= f.label :Run_propietario %><br>
     <%= f.text_field :run_own %>
   </div>
   <div class="field">
-    <%= f.label :nom_prop %><br>
+    <%= f.label :Nombre_propietario %><br>
     <%= f.text_field :nom_prop %>
   </div>
   <div class="field">
-    <%= f.label :apells_prop %><br>
+    <%= f.label :Apellidos_propietario %><br>
     <%= f.text_field :apells_prop %>
   </div>
   <div class="field">
-    <%= f.label :tel1_prop %><br>
-    <%= f.text_field :tel1_prop %>
+    <%= f.label :Teléfono_propietario %><br>
+    <%= f.text_field :tel_prop %>
   </div>
   <div class="field">
-    <%= f.label :tel2_prop %><br>
-    <%= f.text_field :tel2_prop %>
-  </div>
-  <div class="field">
-    <%= f.label :email_prop %><br>
+    <%= f.label :Email_propietario %><br>
     <%= f.text_field :email_prop %>
   </div>
   <div class="actions">
