--- a/ProyectoPBD/app/views/comunnes/_form.html.erb
+++ b/ProyectoPBD/app/views/comunnes/_form.html.erb
@@ -14,11 +14,11 @@
     <% end %>
 
     <div class="field">
-      <%= f.label :nom_comun %><br>
+      <%= f.label :Nombre_comuna %><br>
       <%= f.text_field :nom_comun %>
     </div>
     <div class="field">
-      <%= f.label :num_comun %><br>
+      <%= f.label :Número_comuna %><br>
       <%= f.number_field :num_comun %>
     </div>
     <div class="actions">
