--- a/ProyectoPBD/app/views/concepts/_form.html.erb
+++ b/ProyectoPBD/app/views/concepts/_form.html.erb
@@ -14,7 +14,7 @@
     <% end %>
 
     <div class="field">
-      <%= f.label :nom_conc %><br>
+      <%= f.label :Nombre_concepto %><br>
       <%= f.text_field :nom_conc %>
     </div>
     <div class="actions">
