--- a/ProyectoPBD/app/views/drivers_license_alerts/_form.html.erb
+++ b/ProyectoPBD/app/views/drivers_license_alerts/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :plant_alert_licenc %><br>
+    <%= f.label :Plantilla_alerta_licencia %><br>
     <%= f.text_area :plant_alert_licenc %>
   </div>
   <div class="actions">
