--- a/ProyectoPBD/app/views/external_enterprises/_form.html.erb
+++ b/ProyectoPBD/app/views/external_enterprises/_form.html.erb
@@ -12,47 +12,47 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :rut_ent %><br>
+    <%= f.label :Rut_empresa %><br>
     <%= f.text_field :rut_ent %>
   </div>
   <div class="field">
-    <%= f.label :giro_emp %><br>
+    <%= f.label :Giro_empresa %><br>
     <%= f.text_field :giro_emp %>
   </div>
   <div class="field">
-    <%= f.label :nom_emp %><br>
+    <%= f.label :Nombre_empresa %><br>
     <%= f.text_field :nom_emp %>
   </div>
   <div class="field">
-    <%= f.label :dir_emp %><br>
+    <%= f.label :Dirección_empresa %><br>
     <%= f.text_field :dir_emp %>
   </div>
   <div class="field">
-    <%= f.label :tel1_emp %><br>
+    <%= f.label :Teléfono_1_empresa %><br>
     <%= f.text_field :tel1_emp %>
   </div>
   <div class="field">
-    <%= f.label :tel2_emp %><br>
+    <%= f.label :Teléfono_2_empresa%><br>
     <%= f.text_field :tel2_emp %>
   </div>
   <div class="field">
-    <%= f.label :email_emp %><br>
+    <%= f.label :Email_empresa %><br>
     <%= f.text_field :email_emp %>
   </div>
   <div class="field">
-    <%= f.label :est_conv_emp %><br>
+    <%= f.label :Estado_convenio_empresa %><br>
     <%= f.text_field :est_conv_emp %>
   </div>
   <div class="field">
-    <%= f.label :ini_conv_emp %><br>
+    <%= f.label :Fecha_inicio_convenio %><br>
     <%= f.date_select :ini_conv_emp %>
   </div>
   <div class="field">
-    <%= f.label :fin_conv_emp %><br>
+    <%= f.label :Fecha_término_convenio %><br>
     <%= f.date_select :fin_conv_emp %>
   </div>
   <div class="field">
-    <%= f.label :descrip_conv_emp %><br>
+    <%= f.label :Descripción_convenio%><br>
     <%= f.text_area :descrip_conv_emp %>
   </div>
   <div class="actions">
