--- a/ProyectoPBD/app/views/log_sqls/_form.html.erb
+++ b/ProyectoPBD/app/views/log_sqls/_form.html.erb
@@ -12,31 +12,31 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :tms_log_sql %><br>
+    <%= f.label :TMS_log_sql %><br>
     <%= f.date_select :tms_log_sql %>
   </div>
   <div class="field">
-    <%= f.label :tabla_log_sql %><br>
+    <%= f.label :Tabla_log_sql %><br>
     <%= f.text_field :tabla_log_sql %>
   </div>
   <div class="field">
-    <%= f.label :operac_log_sql %><br>
+    <%= f.label :Operación_log_sql %><br>
     <%= f.text_field :operac_log_sql %>
   </div>
   <div class="field">
-    <%= f.label :usuar_log_sql %><br>
+    <%= f.label :Usuario_log_sql %><br>
     <%= f.text_field :usuar_log_sql %>
   </div>
   <div class="field">
-    <%= f.label :dat_antes_log_sql %><br>
+    <%= f.label :Datos_antes_log_sql %><br>
     <%= f.text_field :dat_antes_log_sql %>
   </div>
   <div class="field">
-    <%= f.label :dat_desp_log_sql %><br>
+    <%= f.label :Datos_después_log_sql %><br>
     <%= f.text_field :dat_desp_log_sql %>
   </div>
   <div class="field">
-    <%= f.label :ope_det_log_sql %><br>
+    <%= f.label :Operación_det_log_sql %><br>
     <%= f.text_field :ope_det_log_sql %>
   </div>
   <div class="actions">
