--- a/ProyectoPBD/app/views/owners/edit.html.erb
+++ b/ProyectoPBD/app/views/owners/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing owner</h1>
+<h1>Editar Propietario</h1>
 
 <%= render 'form' %>
 
-<%= button_to 'Ver', @owner , :method => 'get', :class => 'btn btn-info' %> |
-<%= button_to 'Volver', owners_path , :method => 'get', :class => 'btn btn-default'%>
+<%= button_to 'Ver', @owner, :method => 'get', :class => 'btn btn-info' %> |
+<%= button_to 'Volver', owners_path, :method => 'get', :class => 'btn btn-default' %>
