--- a/ProyectoPBD/app/views/owners/new.html.erb
+++ b/ProyectoPBD/app/views/owners/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New owner</h1>
+<h1>Nuevo propietario</h1>
 
 <%= render 'form' %>
 
-<%= button_to 'Volver', owners_path, :method => 'get', :class => 'btn btn-default' %>
+<%= button_to 'Volver', owners_path, :method => 'get', :class => 'btn btn-default'%>
