--- a/ProyectoPBD/app/views/devise/registrations/edit.html.erb
+++ b/ProyectoPBD/app/views/devise/registrations/edit.html.erb
@@ -10,10 +10,10 @@
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+  <div><%= f.label :nueva_password %> <i>(déjalo en blanco si no deseas modificarlo)</i><br />
   <%= f.password_field :password, :autocomplete => "off" %></div>
 
-  <div><%= f.label :password_confirmation %><br />
+  <div><%= f.label :confirma_nueva_password %><br />
   <%= f.password_field :password_confirmation %></div>
 
   <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
