--- a/ProyectoPBD/app/views/travel_requests/show.html.erb
+++ b/ProyectoPBD/app/views/travel_requests/show.html.erb
@@ -1,4 +1,9 @@
-<% if user_signed_in? and current_user.tipo == 'operador' %>
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
+
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -28,6 +33,7 @@
 
 <p>
   <strong>Cantidad de pasajeros:</strong>
+
   <%= @travel_request.cant_pasaj_sol %>
 </p>
 
@@ -46,5 +52,8 @@
   <%= @travel_request.est_sol %>
 </p>
 
-<%= button_to 'Editar', edit_travel_request_path(@travel_request) , :method => 'get', :class => 'btn btn-warning' %> |
+<!--<%= button_to 'Editar', edit_travel_request_path(@travel_request) , :method => 'get', :class => 'btn btn-warning' %> |
 <%= button_to 'Volver', travel_requests_path , :method => 'get', :class => 'btn btn-default'%>
+-->
+
+</div></div></div>
