--- a/ProyectoPBD/app/views/offer_vehicles/_form.html.erb
+++ b/ProyectoPBD/app/views/offer_vehicles/_form.html.erb
@@ -16,7 +16,7 @@
     <%= f.number_field :id_veh %>
   </div>
   <div class="field">
-    <%= f.label :Id_bloue %><br>
+    <%= f.label :Id_bloque %><br>
     <%= f.number_field :id_block %>
   </div>
   <div class="field">
