--- a/ProyectoPBD/app/views/scheduling_blocks/_form.html.erb
+++ b/ProyectoPBD/app/views/scheduling_blocks/_form.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :ini_bloq %><br>
+    <%= f.label :Inicio_bloque %><br>
     <%= f.datetime_select :ini_bloq %>
   </div>
   <div class="field">
-    <%= f.label :fin_bloq %><br>
+    <%= f.label :Fin_bloque %><br>
     <%= f.datetime_select :fin_bloq %>
   </div>
   <div class="actions">
