--- a/ProyectoPBD/app/views/schedulings/_form.html.erb
+++ b/ProyectoPBD/app/views/schedulings/_form.html.erb
@@ -12,15 +12,15 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :id_off_veh %><br>
+    <%= f.label :Id_oferta_vehículo %><br>
     <%= f.number_field :id_off_veh %>
   </div>
   <div class="field">
-    <%= f.label :run_driv %><br>
+    <%= f.label :Run_conductor %><br>
     <%= f.text_field :run_driv %>
   </div>
   <div class="field">
-    <%= f.label :run_cli %><br>
+    <%= f.label :Run_cliente %><br>
     <%= f.text_field :run_cli %>
   </div>
   <div class="actions">
