--- a/ProyectoPBD/app/views/state_histories/_form.html.erb
+++ b/ProyectoPBD/app/views/state_histories/_form.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :id_trav %><br>
+    <%= f.label :Id_viaje %><br>
     <%= f.number_field :id_trav %>
   </div>
   <div class="field">
-    <%= f.label :id_stat %><br>
+    <%= f.label :Id_estado %><br>
     <%= f.number_field :id_stat %>
   </div>
   <div class="actions">
