--- a/ProyectoPBD/app/views/technical_review_expirations/_form.html.erb
+++ b/ProyectoPBD/app/views/technical_review_expirations/_form.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :mes_venc_rev_tec %><br>
+    <%= f.label :Mes_vencimiento_revisión_técnica %><br>
     <%= f.text_field :mes_venc_rev_tec %>
   </div>
   <div class="field">
-    <%= f.label :num_venc_rev_tec %><br>
+    <%= f.label :Ultimo_dígito_de_patente %><br>
     <%= f.number_field :num_venc_rev_tec %>
   </div>
   <div class="actions">
