--- a/ProyectoPBD/app/views/travel_requests/_form.html.erb
+++ b/ProyectoPBD/app/views/travel_requests/_form.html.erb
@@ -22,35 +22,35 @@
       
   </div>
   <div class="field">
-    <%= f.label :dir_orig_sol %><br>
+    <%= f.label :Dirección_origen %><br>
     <%= f.text_field :dir_orig_sol %>
   </div>
   <div class="field">
-    <%= f.label :dir_dest_sol %><br>
-    <%= f.text_field :dir_dest_sol %>
-  </div>
-  <div class="field">
-    <%= f.label :com_orig_sol %><br>
+    <%= f.label :Comuna_origen %><br>
     <%= f.text_field :com_orig_sol %>
   </div>
   <div class="field">
-    <%= f.label :com_dest_sol %><br>
+    <%= f.label :dirección_destino %><br>
+    <%= f.text_field :dir_dest_sol %>
+  </div>
+  <div class="field">
+    <%= f.label :Comuna_destino %><br>
     <%= f.text_field :com_dest_sol %>
   </div>
   <div class="field">
-    <%= f.label :cant_pasaj_sol %><br>
+    <%= f.label :Cantidad_de_pasajeros %><br>
     <%= f.number_field :cant_pasaj_sol %>
   </div>
   <div class="field">
-    <%= f.label :fecha_crea_sol %><br>
+    <%= f.label :Fecha_creación %><br>
     <%= f.date_select :fecha_crea_sol %>
   </div>
   <div class="field">
-    <%= f.label :fecha_serv_sol %><br>
+    <%= f.label :Fecha_que_necesita_servicio %><br>
     <%= f.date_select :fecha_serv_sol %>
   </div>
   <div class="field">
-    <%= f.label :est_sol %><br>
+    <%= f.label :Estado_solicitud %><br>
     <%= f.text_field :est_sol %>
   </div>
   
