--- a/ProyectoPBD/app/views/vehicles/_form.html.erb
+++ b/ProyectoPBD/app/views/vehicles/_form.html.erb
@@ -12,27 +12,27 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :run_own %><br>
+    <%= f.label :Run_propietario %><br>
     <%= f.text_field :run_own %>
   </div>
   <div class="field">
-    <%= f.label :pat_veh %><br>
+    <%= f.label :Patente_Vehículo %><br>
     <%= f.text_field :pat_veh %>
   </div>
   <div class="field">
-    <%= f.label :mar_veh %><br>
+    <%= f.label :Marca_Vehículo %><br>
     <%= f.text_field :mar_veh %>
   </div>
   <div class="field">
-    <%= f.label :model_veh %><br>
+    <%= f.label :Modelo_Vehículo %><br>
     <%= f.text_field :model_veh %>
   </div>
   <div class="field">
-    <%= f.label :tipo_veh %><br>
+    <%= f.label :Tipo_vehículo %><br>
     <%= f.text_field :tipo_veh %>
   </div>
   <div class="field">
-    <%= f.label :km_sem_veh %><br>
+    <%= f.label :Kilómetros_recorridos_semanalmente %><br>
     <%= f.number_field :km_sem_veh %>
   </div>
   <div class="actions">
