--- a/ProyectoPBD/app/views/states/_form.html.erb
+++ b/ProyectoPBD/app/views/states/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :nom_est %><br>
+    <%= f.label :Nombre_estado %><br>
     <%= f.text_field :nom_est %>
   </div>
   <div class="actions">
