--- a/ProyectoPBD/app/views/technical_review_alerts/_form.html.erb
+++ b/ProyectoPBD/app/views/technical_review_alerts/_form.html.erb
@@ -14,7 +14,7 @@
     <% end %>
 
     <div class="field">
-      <%= f.label :plant_alert_rev_tec %><br>
+      <%= f.label :Plantilla_alertas_revisión_técnica %><br>
       <%= f.text_area :plant_alert_rev_tec %>
     </div>
     <div class="actions">
