--- a/ProyectoPBD/app/views/travel_requests/show.html.erb
+++ b/ProyectoPBD/app/views/travel_requests/show.html.erb
@@ -1,15 +1,19 @@
+
 <div class="container marg2">
     <br>
     <br><br>
         <div class="row">
-            <div class="col-lg-12 ">
+            <div class="col-lg-12">
+            <div class="alert alert-success center" role="alert">
+              <strong>Bien hecho!</strong> Tu solicitud ha sido enviada con exito. Espera nuestro llamado <%=link_to 'ActiveCab',{:controller=>'home'}, :class=>'alert-link'%>
+            </div>
 
 <p id="notice"><%= notice %></p>
 
-<p>
+<!--<p>
   <strong>Run cliente:</strong>
   <%= @travel_request.run_cli %>
-</p>
+</p> -->
 
 <p>
   <strong>Dirección origen:</strong>
@@ -55,5 +59,7 @@
 <!--<%= button_to 'Editar', edit_travel_request_path(@travel_request) , :method => 'get', :class => 'btn btn-warning' %> |
 <%= button_to 'Volver', travel_requests_path , :method => 'get', :class => 'btn btn-default'%>
 -->
+<%=button_to 'Atras',{:controller=>'home'}, :class=>'btn btn-success' %>
+
 
 </div></div></div>
