--- a/ProyectoPBD/app/views/travels/_form.html.erb
+++ b/ProyectoPBD/app/views/travels/_form.html.erb
@@ -12,19 +12,19 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :run_driv %><br>
+    <%= f.label :rut_conductor %><br>
     <%= f.text_field :run_driv %>
   </div>
   <div class="field">
-    <%= f.label :id_trav_req %><br>
+    <%= f.label :id_solicitud_de_viaje %><br>
     <%= f.number_field :id_trav_req %>
   </div>
   <div class="field">
-    <%= f.label :hora_ini_via %><br>
+    <%= f.label :hora_inicio_viaje %><br>
     <%= f.time_select :hora_ini_via %>
   </div>
   <div class="field">
-    <%= f.label :tiemp_est_via %><br>
+    <%= f.label :tiempo_estimado_viaje %><br>
     <%= f.number_field :tiemp_est_via %>
   </div>
   <div class="field">
@@ -32,7 +32,7 @@
     <%= f.text_field :dist_est_via %>
   </div>
   <div class="field">
-    <%= f.label :val_via %><br>
+    <%= f.label :valor_de_viaje %><br>
     <%= f.number_field :val_via %>
   </div>
   <div class="actions">
