--- a/ProyectoPBD/app/views/travels/show.html.erb
+++ b/ProyectoPBD/app/views/travels/show.html.erb
@@ -1,3 +1,9 @@
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
+
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -32,3 +38,6 @@
 
 <%= button_to 'Editar', edit_travel_path(@travel) , :method => 'get', :class => 'btn btn-warning' %> |
 <%= button_to 'Volver', travels_path , :method => 'get', :class => 'btn btn-default' %>
+
+
+</div></div></div>
