--- a/ProyectoPBD/app/views/travel_requests/new.html.erb
+++ b/ProyectoPBD/app/views/travel_requests/new.html.erb
@@ -1,34 +1,48 @@
-		
-
-<% if user_signed_in? and current_user.tipo == 'cli_nat' %>
-
+<div class="container marg2">
     <br>
     <br><br>
         <div class="row">
             <div class="col-lg-12 ">
+			<%= button_to 'Volver', :controller=>'home' , :method => 'get', :class => 'btn btn-default'%>
+
+
+<% if user_signed_in? and current_user.tipo == 'cli_nat' %>
+
+    
             <h1>Nueva Solicitud de Viaje</h1>
-				<div class="col-lg-4">
+				
+            	<div class="col-lg-4 ">
+   		          <div class="panel panel-success">
+		              <div class="panel-heading">
+		                <h3 class="panel-title">Solicitud</h3>
+		              </div>
+		              <div class="panel-body">
+	
+
+		            		<%= render 'form' %>
+
+
+             			</div>
+             		</div>
+             	</div>
+
+
+
+            	</div>
+            	<div class="col-lg-4 ">
+            	</div>
+            	<div class="col-lg-4 ">
+            	</div>
 				
 
 
-					<%= render 'form' %>
+
 					
 
-					<%= button_to 'Volver', travel_requests_path , :method => 'get', :class => 'btn btn-default'%>
 	
 
 				
-				</div
-				<div class="col-lg-4">
-
 				
-
-					
-				</div>	
-				<div class="col-lg-4">
-
-				</div>
-		
 		
 
 
@@ -41,3 +55,5 @@
 <% end %>
 
 </div>
+
+</div></div>
