--- a/ProyectoPBD/app/views/travels/index.html.erb
+++ b/ProyectoPBD/app/views/travels/index.html.erb
@@ -1,3 +1,4 @@
+
 <div class="container marg2">
     <br>
     <br><br>
@@ -51,3 +52,4 @@
 <br>
 
 <%= button_to 'Nuevo', new_travel_path , :method => 'get', :class => 'btn btn-default' %>
+</div></div></div></div>
