--- a/ProyectoPBD/app/views/travels/new.html.erb
+++ b/ProyectoPBD/app/views/travels/new.html.erb
@@ -1,5 +1,14 @@
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
+
 <h1>Nuevo viaje</h1>
 
 <%= render 'form' %>
 
 <%= button_to 'Volver', travels_path, :method => 'get', :class => 'btn btn-default' %>
+
+
+</div></div></div>
