--- a/ProyectoPBD/app/views/travel_requests/show.html.erb
+++ b/ProyectoPBD/app/views/travel_requests/show.html.erb
@@ -4,6 +4,7 @@
     <br><br>
         <div class="row">
             <div class="col-lg-12">
+<% if user_signed_in? and current_user.rut == @travel_request.run_cli %>
             <div class="alert alert-success center" role="alert">
               <strong>Bien hecho!</strong> Tu solicitud ha sido enviada con exito. Espera nuestro llamado <%=link_to 'ActiveCab',{:controller=>'home'}, :class=>'alert-link'%>
             </div>
@@ -51,15 +52,23 @@
   <%= @travel_request.fecha_serv_sol %>
 </p>
 
-<p>
+<!--<p>
   <strong>Estado solicitud:</strong>
   <%= @travel_request.est_sol %>
-</p>
+</p>-->
 
 <!--<%= button_to 'Editar', edit_travel_request_path(@travel_request) , :method => 'get', :class => 'btn btn-warning' %> |
 <%= button_to 'Volver', travel_requests_path , :method => 'get', :class => 'btn btn-default'%>
 -->
 <%=button_to 'Atras',{:controller=>'home'}, :class=>'btn btn-success' %>
+
+<% else %>
+
+
+<p>No se encuentra habilitado para ver esta solicitud </p>
+
+
+<% end %>
 
 
 </div></div></div>
