--- a/ProyectoPBD/app/views/travels/new.html.erb
+++ b/ProyectoPBD/app/views/travels/new.html.erb
@@ -3,12 +3,35 @@
     <br><br>
         <div class="row">
             <div class="col-lg-12 ">
+				<h1>Nuevo viaje</h1>
 
-<h1>Nuevo viaje</h1>
+		            <div class="col-lg-4 ">
+       		          <div class="panel panel-success">
+			              <div class="panel-heading">
+			                <h3 class="panel-title">Solicitud</h3>
+		    	          </div>
+		                <div class="panel-body">
+	
 
-<%= render 'form' %>
+							<%= render 'form' %>
 
-<%= button_to 'Volver', travels_path, :method => 'get', :class => 'btn btn-default' %>
+						</div>
+					</div>
+				
+
+
+		            	
+		            </div>
+		            <div class="col-lg-4 ">
+		            	
+		            </div>
+		            <div class="col-lg-4 ">
+		            	
+		            </div>
+
+
+
+
 
 
 </div></div></div>
