--- a/ProyectoPBD/app/views/travel_requests/index.html.erb
+++ b/ProyectoPBD/app/views/travel_requests/index.html.erb
@@ -1,3 +1,10 @@
+<% if user_signed_in? and current_user.tipo == 'administrador' %>
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
+
 <h1>Listar Solicitud de Viaje</h1>
 
 <table>
@@ -41,3 +48,5 @@
 <br>
 
 <%= button_to 'Nuevo', new_travel_request_path  , :method => 'get', :class => 'btn btn-default'%>
+</div></div></div>
+<% end %>
