--- a/ProyectoPBD/app/views/travels/index.html.erb
+++ b/ProyectoPBD/app/views/travels/index.html.erb
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-lg-12 ">
 
-<h1>Listing travels</h1>
+<h1>Lista de viajes</h1>
 
 <div class="panel panel-default">
       <!-- Default panel contents -->
