'vistas_extras_otros'

--- a/ProyectoPBD/app/views/base_prices/index.html.erb
+++ b/ProyectoPBD/app/views/base_prices/index.html.erb
@@ -10,7 +10,7 @@
 <h1>Listado de precios base</h1>
 <br><br><br>
 
-<div class="panel panel-default">
+<div class="panel panel-success">
       <!-- Default panel contents -->
       <div class="panel-heading">Lista de precios bases</div>
       <div class="panel-body">
