--- a/ProyectoPBD/app/views/travels/new.html.erb
+++ b/ProyectoPBD/app/views/travels/new.html.erb
@@ -23,10 +23,10 @@
 
 		            	
 		            </div>
-		            <div class="col-lg-4 ">
+		            <div class="col-lg-3 ">
 						<div class="panel panel-default">
 						      <!-- Default panel contents -->
-						      <div class="panel-heading">Lista de viajes</div>
+						      <div class="panel-heading">Lista de solicitudes de viajes</div>
 
 
 						      <!-- Table -->
@@ -34,7 +34,7 @@
 						  <thead>
 						    <tr>
 						      <th>Rut conductor</th>
-						      <th>Id solicitud</th>
+						      <th>Id sol.</th>
 						    </tr>
 						  </thead>
 
@@ -60,8 +60,53 @@
 
 
 		            	
-		            </div>
-		            <div class="col-lg-4 ">
+		            </div></div>
+		            <div class="col-lg-5 ">
+
+						<div class="panel panel-warning">
+						      <!-- Default panel contents -->
+						      <div class="panel-heading">Lista de viajes</div>
+
+
+						      <!-- Table -->
+						      <table class="table">
+						  <thead>
+						    <tr>
+						      <th>Id viaje</th>
+						      <th>Dirección origen</th>
+						      <th>Dirección destino</th>
+						    </tr>
+						  </thead>
+
+						  <tbody>
+
+
+
+
+						<% @travel_requests.each do |tr| %>	
+					      <tr>
+					        <td><%= tr.id_trav_req %></td>
+					        <td><%= tr.dir_orig_sol%></td>
+					        <td><%= tr.dir_dest_sol%></td>
+					      </tr>
+						<% end %>
+							</tbody>
+						</table>
+
+
+
+
+
+
+
+
+		            	
+
+
+
+
+
+
 		            	
 		            </div>
 
